# mapperbot

install/: local_setup.sh  setup.sh
install/mapperbot_description/share/mapperbot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mapperbot_description/share/mapperbot_description/launch/: gazebo.launch.py
install/mapperbot_description/share/mapperbot_description/meshes/: base_link.stl  br_control_arm_1.stl  camera_link_1.stl  fl_control_arm_1.stl  fr_control_arm_1.stl  lidar_link_1.stl  periscope_base_1.stl  scope_mid_lower_1.stl  scope_upper_1.stl  wheel_back_right_1.stl  wheel_front_left_1.stl  wheel_front_right_1.stl
install/mapperbot_description/share/mapperbot_description/urdf/: mapperbot.xacro  materials.xacro
log/: latest_build
src/mapperbot_description/: setup.py
src/mapperbot_description/config/: controller_config.yaml  ros_gz_bridge_gazebo.yaml
src/mapperbot_description/launch/: display.launch.py  gazebo.launch.py
src/mapperbot_description/meshes/: bl_control_arm_1.stl  camera_body_1.stl  imu_link_1.stl  scope_lower_1.stl  scope_mid_upper_1.stl  wheel_back_left_1.stl
src/mapperbot_description/urdf/: mapperbot.gazebo  mapperbot.ros2control  materials.xacro
src/mapperbot_description/worlds/: mazeworld.sdf
